# BasisSharing

./: .gitignore  .pre-commit-config.yaml  Makefile  README.md  calib.py  config.py  eval_adapter.py  eval_latency_throughput.py  eval_ppl.py  group.py  lora.py  model_factory.py  prepare_data.py  pyproject.toml  test.py  test_adapter.py  train.py  utils.py
benchmarks/: _benchmark_utils.py  _data_utils.py  _eval_utils.py  collect_XtX_llama_2_7B.py  compress_llama_2_7B.py  llama_2_7B.py  llama_3_dot_2_1B.py  mistral_7B.py  opt_6_dot_7B.py  ppl_llama_2_7B.py
models/: gpt2.py  llama.py  mistral.py  opt.py
src/basissharing/: __init__.py  bs_config.py  bs_configs.py  bs_layers.py  bs_mixin.py  collector.py  compressor.py
tests/: conftest.py  test_bs_mixin.py  test_collector.py  test_compression_math.py  test_compressor.py  test_core_mixin.py  test_integration.py
